--- a/XLib/TODO.txt
+++ b/XLib/TODO.txt
@@ -1,3 +1,10 @@
+- travis: disable. perhaps try setting jenkins on a linux vm.
+- git submodules - is everything ok?
+- rename XLib -> zLib
+- rc files on windows - version
+- ssh files on linux machine
+- cpack / make install
+
 - make DLLs
 - build on linux
 - in lib assert-s
